src/test/ui/feature-gate/feature-gate-const_generic_defaults.stderr
error: default values for const generic parameters are unstable
  --> $DIR/feature-gate-const_generic_defaults.rs:4:27
   |
LL | struct A<const N: usize = 3>;
   |                           ^
   |
   = note: to enable them use #![feature(const_generic_defaults)]

error: aborting due to previous error

